@@ -1,3 +1,8 @@
+2005-11-18  Andrew Stubbs  <andrew.stubbs@st.com>
+
+	* mi/mi-main.c (mi_load_progress): Ensure the use of the correct mi
+	uiout for the duration of the function.
+
 2005-11-18  Nick Roberts  <nickrob@snap.net.nz>
 
 	* mi/gdb-mi.el (gdb-source-file-list): Declare.
